 Spellcaster: fixed a GUI error
 Spellcaster: No support, yet, for look direction of "wave type" spells.
 Python scripting: fixed a major memory leak

Enhancements:
 Spellcaster: added additionnal healing options "exura sio..."
 Spellcaster: added AoE spell support
 Fisher: Option to stop fishing when no worms(Only half way done... need checkbox in GUI for "other/fishOnlyWhenWorms" config)
 Spellcaster: added additionnal healing options and strike spell casting for mages
 Spellcaster: strike spell casting for paladins and Knights
 Auto loot: improved speed of looting
 Cave bot: improved speed of looting
 Grouping: Improved algorithm for grouping

1.16.2, 10.04.2008
Defects:
 General: removed crash bug which appeared after upgrading to tibia client 8.11

1.16.1, 09.04.2008
Enhancements:
 General: updated to Tibia Client 8.11

1.16.0, 08.02.2008
Defects:
 General: fixed potential crash bug when spammed with many big messages
 Cave bot: fixed going up with a ladder in new areas
 Show map: at least one ground=1 required now on a tile for it to be avaialble
 Tiles: fixed some Darashian tiles
 Auto loot: small fix in speed of looter
 Cave bot: small fix in speed of looter

Enhancements:
 Fluid drinker: redesigned fluid drinker to fully work with the new potions
 XRay: added module XRay
 

1.15.2, 15.12.2007
Defects:
 Fluid drinker: added support for the new fluids
 Tiles: fixed tile 7522

1.15.1, 12.12.2007
Enhancements:
 General: updated to Tibia Client 8.1

1.15.0, 26.06.2007
Enhancements:
 General: updated to Tibia client 8.00
 Cave bot: improved performance of walking and looting
 General: improved performance of all kernel functions

Defects:
 Cave bot: fixed incompatibility between killing priority and creature info

1.14.1, 04.06.2007
Defects:
 Cave bot: fixed creature selection algorithm (bug since 1.13.2)
 Cave bot: fixed creature killing priority
 Cave bot: fixed stick to monster
 Cave bot: improved loot from floor performance
 Auto go/log: fixed ignore spells