@@ -64,14 +64,14 @@ END
 // Dialog
 //
 
-IDD_CONFIG DIALOG DISCARDABLE  0, 0, 171, 150
+IDD_CONFIG DIALOG DISCARDABLE  0, 0, 171, 153
 STYLE DS_MODALFRAME | WS_POPUP | WS_CAPTION | WS_SYSMENU
-CAPTION "Module: fisher"
+CAPTION "Module: Fisher"
 FONT 8, "MS Sans Serif"
 BEGIN
-    DEFPUSHBUTTON   "OK",IDOK,62,129,50,14
+    DEFPUSHBUTTON   "OK",IDOK,63,132,50,14
     CONTROL         "Enable fishing",IDC_ENABLE,"Button",BS_AUTOCHECKBOX | 
-                    BS_PUSHLIKE | WS_TABSTOP,7,104,157,14
+                    BS_PUSHLIKE | WS_TABSTOP,7,114,157,14
     LTEXT           "Total fish in all containers:",IDC_STATIC,7,7,88,8
     LTEXT           "Fish reserve for minutes: ",IDC_STATIC,7,20,88,8
     LTEXT           "0 min",IDC_AUTOFISH_TIME,108,20,56,8
@@ -82,9 +82,12 @@ BEGIN
                     WS_TABSTOP,7,56,126,10
     LTEXT           "Recogonized fishy water fields:",IDC_STATIC,7,34,101,8
     LTEXT           "0",IDC_AUTOFISH_FISHYWATER,108,34,56,8
-    LTEXT           "Fish when capacity above:",IDC_STATIC,7,72,86,14,
+    LTEXT           "Fish when capacity above:",IDC_STATIC,7,94,86,14,
                     SS_CENTERIMAGE
-    EDITTEXT        IDC_FISH_CAP,99,72,40,14,ES_AUTOHSCROLL
+    EDITTEXT        IDC_FISH_CAP,99,95,40,14,ES_AUTOHSCROLL
+    CONTROL         "Fish only when worms are present",
+                    IDC_AUTOFISH_FISH_WHEN_WORMS,"Button",BS_AUTOCHECKBOX | 
+                    WS_TABSTOP,7,75,122,10
 END
 
 
@@ -101,7 +104,7 @@ BEGIN
         LEFTMARGIN, 7
         RIGHTMARGIN, 164
         TOPMARGIN, 7
-        BOTTOMMARGIN, 143
+        BOTTOMMARGIN, 146
         HORZGUIDE, 72
         HORZGUIDE, 86
     END
