@@ -7,6 +7,7 @@
 #define IDC_AUTOFISH_TIME               1058
 #define IDC_AUTOFISH_FISHYWATER         1059
 #define IDC_AUTOFISH_MOVETOCONT         1110
+#define IDC_AUTOFISH_FISH_WHEN_WORMS    1111
 #define IDC_TOOL_FLUIDDRINKER_HPBELOW   1113
 #define IDC_TOOL_FLUIDDRINKER_MANABELOW 1114
 #define IDC_TOOL_FLUIDDRINKER_DRINKMANA 1115
